fecth data created but work on functionality

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./index.js" async></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+  <header class="header">
+    <h1>Project</h1>
+    <form>
+      <label for="search">cocktail search</label>
+      <input type="text" name="cocktail" />
+      <button type="submit" class="button">Get Cocktail</button>
+    </form>
+  </header>
+  <aside class="main"></aside> 
 </body>
 </html>
+
