--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
   <title>Document</title>
 </head>
 <body>
-  <header class="header">
-    <h1>Project</h1>
+  
+  
+
+    <section class="wrapper">
+      <nav class="navbar">
+        <img class="logo" src="./assets/bd54895484874a82b3dcfcee61d6808a.png" alt="logo">
+        <ul>
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="#">more stuff</a></li>
+          <li><a href="#">about</a></li>
+        </ul>
+
+      </nav>
+    </section>
     <form>
       <label for="search">cocktail search</label>
       <input type="text" name="cocktail" />
