--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <title>Document</title>
 </head>
 <body>
-  
-  
-
     <section class="wrapper">
       <nav class="navbar">
         <img class="logo" src="./assets/bd54895484874a82b3dcfcee61d6808a.png" alt="logo">
@@ -20,13 +17,21 @@
           <li><a href="#">more stuff</a></li>
           <li><a href="#">about</a></li>
         </ul>
-
       </nav>
+      <div class="middle">
+        <h1>Put something here</h1>
+        <h2>create a cocktail</h2>
+        <form class="form">
+          <label for="cocktail">by name</label>
+          <input type="text" name="cocktail">
+          <input type="submit" class="btn">create</button>
+        </form>
+      </div>
     </section>
     <form>
-      <label for="search">cocktail search</label>
-      <input type="text" name="cocktail" />
-      <button type="submit" class="button">Get Cocktail</button>
+      
+     
+      <button type="submit" class="btn">Get Cocktail</button>
     </form>
   </header>
   <aside class="main"></aside> 
