--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h1>Put something here</h1>
         <h2>create a cocktail</h2>
         <form class="form">
-          <label for="cocktail">by name</label>
-          <input type="text" name="cocktail">
+          
+          <input type="text" name="cocktail" placeholder="cocktail">
           <input type="submit" class="btn">create</button>
         </form>
       </div>
