working on the hamburguer menu

--- a/index2.html
+++ b/index2.html
@@ -10,13 +10,37 @@
   </head>
   <body>
     <header>
-        Header
+      <nav class="navbar">
+        <img
+          class="logo"
+          src="./assets/bd54895484874a82b3dcfcee61d6808a.png"
+          alt="logo"
+        />
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">ingredients</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">classics</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">other</a>
+          </li>
+        </ul>
+        <div class="hamburguer">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
     </header>
-    
+
     <div class="main">
-      <aside class="left"> left </aside>
-      <main> Main </main>
-    <aside class="right">right</aside>
+      <aside class="left">left</aside>
+      <main>
+        <h1>Libations</h1>
+      </main>
+      <aside class="right">right</aside>
     </div>
 
     <footer>footer</footer>
