--- a/index2.html
+++ b/index2.html
@@ -11,11 +11,12 @@
   <body>
     <header>
       <nav class="navbar">
-        <img
-          class="logo"
-          src="./assets/bd54895484874a82b3dcfcee61d6808a.png"
-          alt="logo"
-        />
+        <a href="#" class="nav-branding"><img
+            class="logo"
+            src="./assets/bd54895484874a82b3dcfcee61d6808a.png"
+            alt="logo"
+          /></a>
+      
         <ul class="nav-menu">
           <li class="nav-item">
             <a href="#" class="nav-link">ingredients</a>
@@ -27,6 +28,8 @@
             <a href="#" class="nav-link">other</a>
           </li>
         </ul>
+
+        
         <div class="hamburguer">
           <span class="bar"></span>
           <span class="bar"></span>
