getting cors error, working on the populate data

--- a/index2.html
+++ b/index2.html
@@ -5,31 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style2.css" />
-    <script src="./index.js" async></script>
+    <script  src="./index.js" async ></script>
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav class="navbar">
-        <a href="#" class="nav-branding"><img
-            class="logo"
-            src="./assets/bd54895484874a82b3dcfcee61d6808a.png"
-            alt="logo"
-          /></a>
-      
+        <a href="#" class="nav-branding">Libations</a>
+
         <ul class="nav-menu">
           <li class="nav-item">
             <a href="#" class="nav-link">ingredients</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">classics</a>
+            <a href="#" class="nav-link">popular</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">other</a>
           </li>
         </ul>
 
-        
         <div class="hamburguer">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -39,7 +34,14 @@
     </header>
 
     <div class="main">
-      <aside class="left">left</aside>
+      <aside class="left">
+        <h1>start here</h1>
+
+        <form class="form">
+          <input type="text" name="cocktail" placeholder="cocktail" />
+          <input type="submit" class="btn" />
+        </form>
+      </aside>
       <main>
         <h1>Libations</h1>
       </main>
