--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </ul>
       </nav>
       <div class="middle">
-        <h1>Put something here</h1>
-        <h2>create a cocktail</h2>
+        <h1>start header</h1>
+        
         <form class="form">
           
           <input type="text" name="cocktail" placeholder="cocktail">
