--- a/index.html
+++ b/index.html
@@ -5,39 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style2.css" />
-    <script  src="./index.js" async ></script>
-    <title>Document</title>
+    <script src="./index.js" async></script>
+    <title>Libations</title>
   </head>
   <body>
-   
-      <nav class="navbar">
-        <a href="#" class="nav-branding">Libations</a>
-
-        <div class="navbar-links">
-          
-        </div>
-
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#" class="nav-link">ingredients</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">popular</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">random</a>
-          </li>
-        </ul>
-
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </nav>
+    <nav class="navbar">
     
+      <div class="brand-title">Libations</div>
 
-    <div class="main">
+<a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+</a>
+
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#" class="nav-link">ingredients</a></li>
+          <li><a href="#" class="nav-link">popular</a></li>
+          <li><a href="#" class="nav-link">random</a></li>
+        </ul>
+      </div>
+
+    </nav>
+
+    <div class="main-div">
       <aside class="left">
         <h1>start here</h1>
 
