trying to get random cocktails

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="navbar-links">
           <ul>
-            <li><a href="./indextwo.html" class="nav-link">classics</a></li>
+            <li><a href="#" class="nav-link" id="classics">classics</a></li>
             <li><a href="#" class="nav-link">popular</a></li>
             <li><a href="#" class="nav-link">random</a></li>
           </ul>
