all nav button functional calling api

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <div class="navbar-links">
           <ul>
-            <li><a href="#" class="nav-link" id="classics">classics</a></li>
-            <li><a href="#" class="nav-link">popular</a></li>
-            <li><a href="#" class="nav-link">random</a></li>
+            <li><a href="#" class="nav-link" id="classics">Classics</a></li>
+            <li><a href="#" class="nav-link" id="latest">Latest</a></li>
+            <li><a href="#" class="nav-link" id="random">Random</a></li>
           </ul>
         </div>
       </nav>
