cards are removed after each call

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <label for="cocktail" class="form-label">cocktail</label>
             <input type="text" id="cocktail" class="form-control-lg" required />
             <button type="submit" class="btn btn-primary">search</button>
-            <select name="" class="form-select-lg">
-              <option value="ingredients">ingredients</option>
-            </select>
           </form>
         </div>
       </div>
@@ -55,12 +52,12 @@
         
         <main class="main-div">
           <h1>Libations</h1>
-          <div class="container">
-            <div class="card">
-              <div class="card-body">
+          <div class="container" id="container">
+            <!-- <div class="card">
+              <div class="card-body"> -->
                 
-              </div>
-            </div>
+              <!-- </div>
+            </div> -->
           </div>
 
         </main>
